--- a/news/2020.md
+++ b/news/2020.md
@@ -4,11 +4,22 @@ title: News
 subtitle: What is happening in the Cocoan lab?
 ---
 
+<span style="font-size: 15px !important; color: #BD0026;">Feb 2020 </span>
+
+<b><span style="font-size: 20px !important; color: #0055A9;">Wani's co-authored paper has been published at <i>Nature Human Behaviour</i></span></b>
+
+<span style="font-size: 15px !important; color: #555;">Paper title: "Neural and Sociocultural Mediators of Ethnic Differences in Pain" (1st author: Elizabeth A. Reynolds Losin, U of Miami)</span>
+
+<span style="font-size: 15px !important; color: #555;">It has been long time since we started this study. My role in this study was to help Liz with data analysis and figures. Liz has been a great project leader and also a great writer. I enjoyed working with her. In terms of the study findings, minorities (in this case, African Americans, in the context of the U.S.) can feel more pain even with the similar levels of heat and pain-processing brain activity. This increased pain is related to the previous discrimination experiences and the current attitudes about discrimination, and also to brain regions that are related to pain valuation and affective meaning. This heightened pain is REAL and should NOT be ignored or devalued. Each one of us knows how it feels like when we go through pain. Pain is not a mere reflection of noxious stimulus intensity. Rather, pain is constructed by the brain, which combines the external sensory information with meaning, past experiences, beliefs, and contexts that are all generated and stored within ourselves. I hope our lab studies could help people to more clearly see this rich internal and subjective experiences of pain and suffering, leading us to more empathic society with better treatment. </span>
+
+<span style="font-size: 15px !important; color: #555;">See the publication [here](/publication).</span>
+
+
 <span style="font-size: 15px !important; color: #BD0026;">Jan 2020 </span>
 
-<b><span style="font-size: 20px !important; color: #0055A9;">Jaejoong's first first-author paper has been published at <i>Journal of Clinical Neurology</i></span></b>
+<b><span style="font-size: 20px !important; color: #0055A9;">Jaejoong's first co-first-author paper has been published at <i>Journal of Clinical Neurology</i></span></b>
 
-<span style="font-size: 15px !important; color: #555;">Paper title: "Individual-Level Lesion-Network Mapping to Visualize the Effects of a Stroke Lesion on the Brain Network: Connectograms in Stroke Syndromes"</span>
+<span style="font-size: 15px !important; color: #555;">Paper title: "Individual-Level Lesion-Network Mapping to Visualize the Effects of a Stroke Lesion on the Brain Network: Connectograms in Stroke Syndromes" (1st co-first author: Jae-Sung Lim, Hallym University)</span>
 
 <span style="font-size: 15px !important; color: #555;">Two years ago, our lab started a collaborative project with Prof. Jaesung Lim, MD, PhD on the functional connectivity changes in stroke patients. Jaejoong provided his expertise in fMRI data analysis, including preprocessing, functional connectivity analysis, and connectogram visualization, and Dr. Lim wrote the paper based on the analysis results. This collaboration has been really fruitful, and Wani has been enjoying working with Dr. Lim. We are currently collecting and analyzing large-scale, multi-site stroke fMRI data, which will greatly help understand and predict the functional outcomes of stroke patients based on their functional connectivity patterns. Thus stay tuned.</span>
 
