--- a/news/2020.md
+++ b/news/2020.md
@@ -10,7 +10,7 @@ subtitle: What is happening in the Cocoan lab?
 
 <span style="font-size: 15px !important; color: #555;">Paper title: "Neural and Sociocultural Mediators of Ethnic Differences in Pain" (1st author: Elizabeth A. Reynolds Losin, U of Miami)</span>
 
-<span style="font-size: 15px !important; color: #555;">It has been long time since we started this study. My role in this study was to help Liz with data analysis and figures. Liz has been a great project leader and also a great writer. I enjoyed working with her. In terms of the study findings, minorities (in this case, African Americans, in the context of the U.S.) can feel more pain even with the similar levels of heat and pain-processing brain activity. This increased pain is related to the previous discrimination experiences and the current attitudes about discrimination, and also to brain regions that are related to pain valuation and affective meaning. This heightened pain is REAL and should NOT be ignored or devalued. Each one of us knows how it feels like when we go through pain. Pain is not a mere reflection of noxious stimulus intensity. Rather, pain is constructed by the brain, which combines the external sensory information with meaning, past experiences, beliefs, and contexts that are all generated and stored within ourselves. I hope our lab studies could help people to more clearly see this rich internal and subjective experiences of pain and suffering, leading us to more empathic society with better treatment. </span>
+<span style="font-size: 15px !important; color: #555;">It has been long time since we started this study. My role in this study was to help Liz with data analysis and figures. Liz has been a great project leader and also a great writer. I enjoyed working with her. In terms of the study findings, minorities (in this case, African Americans, in the context of the U.S.) can feel more pain even with the similar levels of heat and pain-processing brain activity. This increased pain is related to the previous discrimination experiences and the current attitude about discrimination, and also the increased pain was mediated by the brain regions that are related to pain valuation and meaning. This increased pain in African Americans is REAL and should NOT be ignored or devalued. We know how it feels like when we go through pain. Pain is not a mere reflection of noxious stimulus intensity. Rather, pain is constructed by the multiple systems in the brain, which combines the external sensory information with meaning, past experiences, beliefs, and contexts. Hopefully this study (and other studies from our lab) could help people to see this rich internal and subjective experiences of pain and suffering, leading us to more empathic society with better interventions. </span>
 
 <span style="font-size: 15px !important; color: #555;">See the publication [here](/publication).</span>
 
