--- a/news/2020.md
+++ b/news/2020.md
@@ -6,6 +6,13 @@ subtitle: What is happening in the Cocoan lab?
 
 <span style="font-size: 15px !important; color: #BD0026;">Feb 2020 </span>
 
+<b><span style="font-size: 20px !important; color: #0055A9;">Hongji featured in an IBS Vlog for the CNIR "일단 뜨겁게 연구하라!"</span></b>
+
+<span style="font-size: 15px !important; color: #555;">She nicely shows how we study pain in the brain! Donghee and Sungwoo also appeared briefly in the video. :)</span>
+
+<center><iframe width="600" height="338" src="https://www.youtube.com/embed/Drab4juDMYU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+<br>
+
 <b><span style="font-size: 20px !important; color: #0055A9;">Wani's co-authored paper has been published at <i>Nature Human Behaviour</i></span></b>
 
 <span style="font-size: 15px !important; color: #555;">Paper title: "Neural and Sociocultural Mediators of Ethnic Differences in Pain" (1st author: Elizabeth A. Reynolds Losin, U of Miami)</span>
