--- a/news/2020.md
+++ b/news/2020.md
@@ -8,7 +8,7 @@ subtitle: What is happening in the Cocoan lab?
 
 <b><span style="font-size: 20px !important; color: #0055A9;">Hongji featured in an IBS Vlog for the CNIR "일단 뜨겁게 연구하라!"</span></b>
 
-<span style="font-size: 15px !important; color: #555;">She nicely shows how we study pain in the brain! Donghee and Sungwoo also appeared briefly in the video. :)</span>
+<span style="font-size: 15px !important; color: #555;">She nicely shows how we study pain in the brain! Donghee and Sungwoo also appeared briefly in the video. :) Have fun watching! </span>
 
 <center><iframe width="600" height="338" src="https://www.youtube.com/embed/Drab4juDMYU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 <br>
