--- a/news/2020.md
+++ b/news/2020.md
@@ -8,7 +8,7 @@ subtitle: What is happening in the Cocoan lab?
 
 <b><span style="font-size: 20px !important; color: #0055A9;">Lada's paper is published on <i>Nature Protocols</i></span></b>
 
-<span style="font-size: 15px !important; color: #555;">This was Lada's first project in the Cocoan lab that she started since she joined the lab around three years ago. The project name was XAIN (explainable AI in Neuroimaging). The idea of the project began with Wani and Tor's 2017 review paper on *Nature Neuroscience*. The peer reviews on the 2017 paper were very challenging, and one reviewer suggested providing the detailed steps for the interpretation of predictive models because we put great emphasis on the importance of building interpretable models in that paper. Though we couldn't fully addressed that comment in the 2017 paper, Wani kept that suggestion in his mind and wanted to work on that soon. When Lada joined the lab, the Cocoanlab was new, and no experiment was going on (because the IRB was pending at that time). Thus it was the perfect timing for this project. Along the way, Prof. Taesup Moon's team joined the project because he was also interested in the explainable AI and using deep learning models on neuroimaging data. Sungwoo also joined the project to provide his help with the python code in the paper. <br><br> We cannot forget the moment when we got a positive email from Nature Protocols that they were interested in our presubmission inquiry and the synopsis. It was right before the 2018 SfN started (November 2018). We were so excited and grateful! After around 3 years since we started this project, our hard work finally pays off! Huge congrats, Lada, and we are so proud of this work. See the video abstract below.</span>
+<span style="font-size: 15px !important; color: #555;">Paper title: “Towards a unified framework for interpreting machine learning models in neuroimaging” (1st author: Lada Kohoutová, PhD student in the Cocoan lab) &nbsp; <a href="https://www.nature.com/articles/s41596-019-0289-5">Nature</a> | <a href="/pdfs/Kohoutova2020.pdf">PDF</a><br><br>This was Lada's first project in the Cocoan lab that she started since she joined the lab around three years ago. The project name was XAIN (explainable AI in Neuroimaging). The idea of the project began with Wani and Tor's 2017 review paper on *Nature Neuroscience*. The peer reviews on the 2017 paper were very challenging, and one reviewer suggested providing the detailed steps for the interpretation of predictive models because we put great emphasis on the importance of building interpretable models in that paper. Though we couldn't fully addressed that comment in the 2017 paper, Wani kept that suggestion in his mind and wanted to work on that soon. When Lada joined the lab, the Cocoanlab was new, and no experiment was going on (because the IRB was pending at that time). Thus it was the perfect timing for this project. Along the way, Prof. Taesup Moon's team joined the project because he was also interested in the explainable AI and using deep learning models on neuroimaging data. Sungwoo also joined the project to provide his help with the python code in the paper. <br><br> We cannot forget the moment when we got a positive email from Nature Protocols that they were interested in our presubmission inquiry and the synopsis. It was right before the 2018 SfN started (November 2018). We were so excited and grateful! After around 3 years since we started this project, our hard work finally pays off! Huge congrats, Lada, and we are so proud of this work. See the video abstract below.</span>
 
 <br>
 <center><iframe width="600" height="338" src="https://www.youtube.com/embed/kcDfEkoQa7Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
