--- a/news/2020.md
+++ b/news/2020.md
@@ -1,46 +1,11 @@
 ---
 layout: page
 title: News
-subtitle: What is happening in the Cocoan lab?
+subtitle: What is happening?
 ---
 
 <span style="font-size: 15px !important; color: #BD0026;">Mar 2020 </span>
 
-<b><span style="font-size: 20px !important; color: #0055A9;">Lada's paper is published on <i>Nature Protocols</i></span></b>
+<span style="font-size: 20px !important; color: #0055A9;">In April 15, Eunsang Cho successfully defended his PhD disseration! The dissetation title is <b><i>"Human and Climate Impacts on Flooding via Remote Sensing, Big Data Analytics, and Modeling"</i></span></b>
 
-<span style="font-size: 15px !important; color: #555;">Paper title: “Towards a unified framework for interpreting machine learning models in neuroimaging” (1st author: Lada Kohoutová, PhD student in the Cocoan lab) &nbsp; <a href="https://www.nature.com/articles/s41596-019-0289-5">Nature</a> | <a href="/pdfs/Kohoutova2020.pdf">PDF</a><br><br>This was Lada's first project in the Cocoan lab that she started since she joined the lab around three years ago. The project name was XAIN (explainable AI in Neuroimaging). The idea of the project began with Wani and Tor's 2017 review paper on *Nature Neuroscience*. The peer reviews on the 2017 paper were very challenging, and one reviewer suggested providing the detailed steps for the interpretation of predictive models because we put great emphasis on the importance of building interpretable models in that paper. Though we couldn't fully addressed that comment in the 2017 paper, Wani kept that suggestion in his mind and wanted to work on that soon. When Lada joined the lab, the Cocoanlab was new, and no experiment was going on (because the IRB was pending at that time). Thus it was the perfect timing for this project. Along the way, Prof. Taesup Moon's team joined the project because he was also interested in the explainable AI and using deep learning models on neuroimaging data. Sungwoo also joined the project to provide his help with the python code in the paper. <br><br> We cannot forget the moment when we got a positive email from Nature Protocols that they were interested in our presubmission inquiry and the synopsis. It was right before the 2018 SfN started (November 2018). We were so excited and grateful! After around 3 years since we started this project, our hard work finally pays off! Huge congrats, Lada, and we are so proud of this work. See the video abstract below.</span>
-
-<center><iframe width="600" height="338" src="https://www.youtube.com/embed/kcDfEkoQa7Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-<br>
-
-<span style="font-size: 15px !important; color: #BD0026;">Feb 2020 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;">Hongji featured in an IBS Vlog for the CNIR "일단 뜨겁게 연구하라!"</span></b>
-
-<span style="font-size: 15px !important; color: #555;">She nicely shows how we study pain in the brain! Donghee and Sungwoo also appeared briefly in the video. :) Have fun watching! </span>
-
-<center><iframe width="600" height="338" src="https://www.youtube.com/embed/Drab4juDMYU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-<br>
-
-<b><span style="font-size: 20px !important; color: #0055A9;">Wani's co-authored paper has been published at <i>Nature Human Behaviour</i></span></b>
-
-<span style="font-size: 15px !important; color: #555;">Paper title: "Neural and Sociocultural Mediators of Ethnic Differences in Pain" (1st author: Elizabeth A. Reynolds Losin, U of Miami)</span>
-
-<span style="font-size: 15px !important; color: #555;">It has been long time since we started this study. My role in this study was to help Liz with data analysis and figures. Liz has been a great project leader and also a great writer. I enjoyed working with her. In terms of the study findings, minorities (in this case, African Americans, in the context of the U.S.) can feel more pain even with the similar levels of heat and pain-processing brain activity. This increased pain is related to the previous discrimination experiences and the current attitude about discrimination, and also the increased pain was mediated by the brain regions that are related to pain valuation and meaning. This increased pain in African Americans is REAL and should NOT be ignored or devalued. We know how it feels like when we go through pain. Pain is not a mere reflection of noxious stimulus intensity. Rather, pain is constructed by the multiple systems in the brain, which combines the external sensory information with meaning, past experiences, beliefs, and contexts. Hopefully this study (and other studies from our lab) could help people to see this rich internal and subjective experiences of pain and suffering, leading us to more empathic society with better interventions. </span>
-
-<span style="font-size: 15px !important; color: #555;">This study has been featured in some Korean news outlets [동아사이언스](http://dongascience.donga.com/news.php?idx=34120) and 동아일보 (see below)</span>
-
-<img src="/news/images/donga_200210.jpg" width="700" align="center" hspace="20" />
-
-<span style="font-size: 15px !important; color: #555;">See the publication [here](/publication).</span>
-
-
-<span style="font-size: 15px !important; color: #BD0026;">Jan 2020 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;">Jaejoong's first co-first-author paper has been published at <i>Journal of Clinical Neurology</i></span></b>
-
-<span style="font-size: 15px !important; color: #555;">Paper title: "Individual-Level Lesion-Network Mapping to Visualize the Effects of a Stroke Lesion on the Brain Network: Connectograms in Stroke Syndromes" (1st co-first author: Jae-Sung Lim, Hallym University)</span>
-
-<span style="font-size: 15px !important; color: #555;">Two years ago, our lab started a collaborative project with Prof. Jaesung Lim, MD, PhD on the functional connectivity changes in stroke patients. Jaejoong provided his expertise in fMRI data analysis, including preprocessing, functional connectivity analysis, and connectogram visualization, and Dr. Lim wrote the paper based on the analysis results. This collaboration has been really fruitful, and Wani has been enjoying working with Dr. Lim. We are currently collecting and analyzing large-scale, multi-site stroke fMRI data, which will greatly help understand and predict the functional outcomes of stroke patients based on their functional connectivity patterns. Thus stay tuned.</span>
-
-<span style="font-size: 15px !important; color: #555;">See the publication [here](/publication).</span>
+<img src="/news/images/defense1.jpg" width="700" align="center" hspace="20" />
