--- a/news/2020.md
+++ b/news/2020.md
@@ -6,6 +6,6 @@ subtitle: What is happening?
 
 <span style="font-size: 15px !important; color: #BD0026;">Mar 2020 </span>
 
-<span style="font-size: 20px !important; color: #0055A9;">In April 15, Eunsang Cho successfully defended his PhD disseration! The dissetation title is <b><i>"Human and Climate Impacts on Flooding via Remote Sensing, Big Data Analytics, and Modeling"</i></span></b>
+<span style="font-size: 20px !important; color: #0055A9;">In April 15, Eunsang Cho successfully defended his PhD disseration! The dissetation title is <b><i>"Human and Climate Impacts on Flooding via Remote Sensing, Big Data Analytics, and Modeling"</i></b></span>
 
-<img src="/news/images/defense1.jpg" width="700" align="center" hspace="20" />
+<img src="/news/images/Defense_main_page.PNG" width="600" align="center" hspace="20" />
