--- a/news/2020.md
+++ b/news/2020.md
@@ -13,5 +13,5 @@ subtitle: What is happening?
 
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2013 </span>
 
-<span style="font-size: 20px !important; color: #0055A9;">Eunsang Cho won <b>the 1st Paper Presentation Award</b> in <a href="http://www.ccwaterforum.or.kr/?ckattempt=1"><i>Chuncheon Global Water Forum 춘천국제물포럼</i></a>, South Korea, September 12-13, 2013. He presented his graduate work entitled "Comparison and Validation of Soil Moisture using AMSR-E and ASCAT sensors in the Korean peninsula"</span> &nbsp; <a href="https://www.hanyang.ac.kr/web/www/interview_student?p_p_id=newsView_WAR_newsportlet&p_p_lifecycle=0&_newsView_WAR_newsportlet_action=view_message&_newsView_WAR_newsportlet_messageId=12797&_newsView_WAR_newsportlet_sCurPage=1">한양뉴스 NewsH</a> | Final publication <a href="https://www.sciencedirect.com/science/article/abs/pii/S003442571500022X">RSE</a> 
+<span style="font-size: 20px !important; color: #0055A9;">Eunsang Cho won <b>the 1st Paper Presentation Award</b> in <a href="http://www.ccwaterforum.or.kr/?ckattempt=1">Chuncheon Global Water Forum 춘천국제물포럼</a>, South Korea, September 12-13, 2013. He presented his graduate work entitled "Comparison and Validation of Soil Moisture using AMSR-E and ASCAT sensors in the Korean peninsula"</span> &nbsp; <a href="https://www.hanyang.ac.kr/web/www/interview_student?p_p_id=newsView_WAR_newsportlet&p_p_lifecycle=0&_newsView_WAR_newsportlet_action=view_message&_newsView_WAR_newsportlet_messageId=12797&_newsView_WAR_newsportlet_sCurPage=1">한양뉴스 NewsH</a> | Final publication <a href="https://www.sciencedirect.com/science/article/abs/pii/S003442571500022X">RSE</a> 
 <img src="/news/images/NewsH.png" width="600" align="center" hspace="20" />
