--- a/news/2020.md
+++ b/news/2020.md
@@ -3,6 +3,12 @@ layout: page
 title: News
 subtitle: What is happening?
 ---
+<span style="font-size: 15px !important; color: #BD0026;">June 2020 </span>
+
+<span style="font-size: 18px !important; color: #07153D;">Eunsang Cho presented his recent research at <a href="http://depts.washington.edu/sinter/">SINTER</a> (Snow International) meeting on 5th June! He was invited As an early career scientists, it was such a honor, and great opportunity to share his research with the international snow science community. The presentation title is <b><i>"The rediscovery of the value of 40-years airborne gamma radiation SWE”"</i></b> SINTER (formerly i-SWGR) is an international collective of scientists with interest in remote sensing of snow, supported by ground-based observations, physical modeling, and data assimilation. SINTER operates distinctly from other community-wide efforts which aim to coordinate progress on snow science, such as the NASA Terrestrial Hydrology Program, monthly NASA SnowEx online meetings, Global Cryosphere Watch Snow Watch working group, etc.</span> 
+
+<img src="/news/images/Presentation_SINTER_cover.PNG" width="600" align="center" hspace="20" />
+<br>
 
 <span style="font-size: 15px !important; color: #BD0026;">Apr 2020 </span>
 
