--- a/news/2020.md
+++ b/news/2020.md
@@ -5,7 +5,7 @@ subtitle: What is happening?
 ---
 <span style="font-size: 15px !important; color: #BD0026;">June 2020 </span>
 
-<span style="font-size: 18px !important; color: #07153D;">I presented his recent research at <a href="http://depts.washington.edu/sinter/"><i>Snow International (SINTER)</i></a> online meeting on 5th June! I was invited from SINTER Executive Team (Chair: <a href="https://profils-profiles.science.gc.ca/en/profile/chris-derksen">Chris Derksen</a>) as a presenter at the first SINTER online meeting. As an early career scientist, it was such a honor, and great opportunity to share his research with the international snow science community. Over 55 scientists and hydrologists attended the meeting. The presentation title is <b><i>"The rediscovery of the value of 40-years airborne gamma radiation SWE". </i></b> SINTER (formerly i-SWGR) is an international collective of scientists with interest in remote sensing of snow, supported by ground-based observations, physical modeling, and data assimilation. SINTER operates distinctly from other community-wide efforts which aim to coordinate progress on snow science, such as the NASA Terrestrial Hydrology Program, monthly NASA SnowEx online meetings, Global Cryosphere Watch Snow Watch working group, etc. Thanks again the SINTER Executive Team! </span> 
+<span style="font-size: 18px !important; color: #07153D;">I presented his recent research at <a href="http://depts.washington.edu/sinter/">Snow International (SINTER)</a> online meeting on 5th June! I was invited from SINTER Executive Team (Chair: <a href="https://profils-profiles.science.gc.ca/en/profile/chris-derksen">Chris Derksen</a>) as a presenter at the first SINTER online meeting. As an early career scientist, it was such a honor, and great opportunity to share my research with the international snow science community. Over 55 scientists and hydrologists attended the meeting. The presentation title is <b><i>"The rediscovery of the value of 40-years airborne gamma radiation SWE". </i></b> SINTER (formerly i-SWGR) is an international collective of scientists with interest in remote sensing of snow, supported by ground-based observations, physical modeling, and data assimilation. SINTER operates distinctly from other community-wide efforts which aim to coordinate progress on snow science, such as the NASA Terrestrial Hydrology Program, monthly NASA SnowEx online meetings, Global Cryosphere Watch Snow Watch working group, etc. Thanks again the SINTER Executive Team! </span> 
 
 <img src="/news/images/Presentation_SINTER_cover.JPG" width="600" align="center" hspace="20" />
 <br>
