--- a/news/2020.md
+++ b/news/2020.md
@@ -12,7 +12,7 @@ subtitle: What is happening?
 
 <span style="font-size: 15px !important; color: #BD0026;">Apr 2020 </span>
 
-<span style="font-size: 18px !important; color: #07153D;">Eunsang Cho successfully defended his PhD disseration last Wednesday (4/15)! The dissetation title is <b><i>"Human and Climate Impacts on Flooding via Remote Sensing, Big Data Analytics, and Modeling"</i></b></span>
+<span style="font-size: 18px !important; color: #07153D;">Eunsang Cho successfully defended his PhD disseration last Wednesday (4/15)! The dissetation title is <b><i>"Human and Climate Impacts on Flooding via Remote Sensing, Big Data Analytics, and Modeling"</i></b>. Full slides are available via <a href="https://drive.google.com/file/d/1UlrezTg_nFbqold1iaQ2HMzUkE_yc88n/view?usp=sharing"><b>this link</b></a>. </span>
 
 <img src="/news/images/Defense_main_page.PNG" width="600" align="center" hspace="20" />
 <br>
