--- a/news/2020.md
+++ b/news/2020.md
@@ -10,6 +10,13 @@ subtitle: What is happening?
 <img src="/news/images/Presentation_SINTER_cover.JPG" width="600" align="center" hspace="20" />
 <br>
 
+<span style="font-size: 15px !important; color: #BD0026;">May 2020 </span>
+
+<span style="font-size: 18px !important; color: #07153D;">I presented virtually my collaborative research with <a href="https://staff.ucar.edu/users/rmccrary">Rachel McCrary</a> at <a href="https://ncar.ucar.edu/">NCAR</a> at the 2020 EGU meeting on 5th May! The presentation title is <b><i>"Future Snow Water Equivalent and Snowmelt Extremes from NA-CORDEX Ensembles". </i></b> Click <a href="https://presentations.copernicus.org/EGU2020/EGU2020-5955_presentation.pdf"><b>here</b></a> for the full slides. Thanks Rachel for your great contribution on the presentation! Feel free to reach out to me if you have any questions/feedback. </span> 
+
+<img src="/news/images/Presentation_EGU.PNG" width="600" align="center" hspace="20" />
+<br>
+
 <span style="font-size: 15px !important; color: #BD0026;">Apr 2020 </span>
 
 <span style="font-size: 18px !important; color: #07153D;">Eunsang Cho successfully defended his PhD disseration last Wednesday (4/15)! The dissetation title is <b><i>"Human and Climate Impacts on Flooding via Remote Sensing, Big Data Analytics, and Modeling"</i></b>. Full slides are available via <a href="https://drive.google.com/file/d/1jYLjmaHLT4aiYdfPSV9QgfWSUUwV-Nrk/view?usp=sharing"><b>this link</b></a>. </span>
