--- a/news/2020.md
+++ b/news/2020.md
@@ -3,6 +3,13 @@ layout: page
 title: News
 subtitle: What is happening?
 ---
+<span style="font-size: 15px !important; color: #BD0026;">Sep 2020 </span>
+
+<span style="font-size: 18px !important; color: #07153D;">I presented my recent research at <a href="https://above.nasa.gov/SnowEx/2020_agenda.html">NASA Terrastrial Hydrology Program Snow Virtual meeting</a> on 14th Sep! I also served as a moderator of the Prairie snow group for the breakout discussion. As an early career scientist, it was great time to hear and share . In this meeting, more than 80 snow scientists and hydrologists attended the meeting. The presentation title is <b><i>"How different are the Sierra Nevada snowpack estimates from four land surface models with three forcing datasets?". </i></b> Click <a href="https://above.nasa.gov/files/snowex_2020/Cho_Day2_poster_879.pdf"><b>here</b></a> for the full slides. If you want to hear my blizzard talk, please visit <a href="https://above.nasa.gov/files/snowex_2020/Cho_Day2_blizzard_839.mp4"><b>video</b></a>. </span> 
+
+<img src="/news/images/Presentation_SnowEx2021.png" width="600" align="center" hspace="20" />
+<br>
+
 <span style="font-size: 15px !important; color: #BD0026;">June 2020 </span>
 
 <span style="font-size: 18px !important; color: #07153D;">I presented my recent research at <a href="http://depts.washington.edu/sinter/">Snow International (SINTER)</a> online meeting on 5th June! I was invited by SINTER Executive Team (Chair: <a href="https://profils-profiles.science.gc.ca/en/profile/chris-derksen">Chris Derksen</a>) as a presenter at the first SINTER online meeting. As an early career scientist, it was such a honor, and great opportunity to share my research with the international snow science community. More than 60 scientists and hydrologists attended the meeting. The presentation title is <b><i>"The rediscovery of the value of 40-years airborne gamma radiation SWE". </i></b> Click <a href="https://drive.google.com/file/d/1rU1wmFiOT1Ddt2UZAEkesJSIOrx2Zo3F/view?usp=sharing"><b>here</b></a> if you want to take a look at the full slides. SINTER (formerly i-SWGR) is an international collective of scientists with interest in remote sensing of snow, supported by ground-based observations, physical modeling, and data assimilation. SINTER operates distinctly from other community-wide efforts which aim to coordinate progress on snow science, such as the NASA Terrestrial Hydrology Program, monthly NASA SnowEx online meetings, Global Cryosphere Watch Snow Watch working group, etc. Thanks again the SINTER Executive Team! Feel free to reach out to me if you have any questions/feedback. </span> 
@@ -14,7 +21,7 @@ subtitle: What is happening?
 
 <span style="font-size: 18px !important; color: #07153D;">I presented virtually my collaborative research with <a href="https://staff.ucar.edu/users/rmccrary">Rachel McCrary</a> at <a href="https://ncar.ucar.edu/">NCAR</a> at the 2020 EGU meeting on 5th May! The presentation title is <b><i>"Future Snow Water Equivalent and Snowmelt Extremes from NA-CORDEX Ensembles". </i></b> Click <a href="https://presentations.copernicus.org/EGU2020/EGU2020-5955_presentation.pdf"><b>here</b></a> for the full slides. Thanks Rachel for your great contribution on the presentation! Feel free to reach out to me if you have any questions/feedback. </span> 
 
-<img src="/news/images/Presentation_EGU.PNG" width="600" align="center" hspace="20" />
+<img src="/news/images/Presentation_EGU.png" width="600" align="center" hspace="20" />
 <br>
 
 <span style="font-size: 15px !important; color: #BD0026;">Apr 2020 </span>
