--- a/news/2020.md
+++ b/news/2020.md
@@ -5,10 +5,12 @@ subtitle: What is happening?
 ---
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2020 </span>
 
-<span style="font-size: 18px !important; color: #07153D;">I presented my recent research at <a href="https://above.nasa.gov/SnowEx/2020_agenda.html">NASA Terrastrial Hydrology Program Snow Virtual meeting</a> on 14th Sep! I also served as a moderator of the Prairie snow group for the breakout discussion. As an early career scientist, it was great time to hear and share . In this meeting, more than 80 snow scientists and hydrologists attended the meeting. The presentation title is <b><i>"How different are the Sierra Nevada snowpack estimates from four land surface models with three forcing datasets?". </i></b> Click <a href="https://above.nasa.gov/files/snowex_2020/Cho_Day2_poster_879.pdf"><b>here</b></a> for the full slides. If you want to hear my blizzard talk, please visit <a href="https://above.nasa.gov/files/snowex_2020/Cho_Day2_blizzard_839.mp4"><b>video</b></a>. </span> 
-
+<span style="font-size: 18px !important; color: #07153D;">I presented my recent research at <a href="https://above.nasa.gov/SnowEx/2020_agenda.html">NASA Terrastrial Hydrology Program Snow Virtual meeting</a> on 14th Sep! I also served as a moderator of the Prairie snow group for the breakout discussion. As an early career scientist, it was great time to hear and share . In this meeting, more than 80 snow scientists and hydrologists attended the meeting. The presentation title is <b><i>"How different are the Sierra Nevada snowpack estimates from four land surface models with three forcing datasets?". </i></b> Click <a href="https://above.nasa.gov/files/snowex_2020/Cho_Day2_poster_879.pdf"><b>here</b></a> for the full slides. 
 <img src="/news/images/Presentation_SnowEx2021.png" width="600" align="center" hspace="20" />
 <br>
+
+If you want to hear my blizzard talk, please visit <a href="https://above.nasa.gov/files/snowex_2020/Cho_Day2_blizzard_839.mp4"><b>video</b></a>. </span> 
+<iframe width="560" height="315" src="https://above.nasa.gov/files/snowex_2020/Cho_Day2_blizzard_839.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <span style="font-size: 15px !important; color: #BD0026;">June 2020 </span>
 
