--- a/news/2020.md
+++ b/news/2020.md
@@ -5,7 +5,7 @@ subtitle: What is happening?
 ---
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2020 </span>
 
-<span style="font-size: 18px !important; color: #07153D;">I presented my Sierra Nevada snowpack work at <a href="https://above.nasa.gov/SnowEx/2020_agenda.html">NASA Terrastrial Hydrology Program Snow Virtual meeting</a> on 14th Sepember, 2020! I also served as a moderator of the Prairie snow group for the breakout discussion. It was great time to hear and discuss various opinions and thoughts about the gaps/opportunities for prairie snow research from operational and science perspectives. More than 80 snow scientists and hydrologists attended this meeting. My presentation title is <b><i>"How different are the Sierra Nevada snowpack estimates from four land surface models with three forcing datasets?". </i></b> Click <a href="https://above.nasa.gov/files/snowex_2020/Cho_Day2_poster_879.pdf"><b>here</b></a> for the full slides. </span> 
+<span style="font-size: 18px !important; color: #07153D;">I presented my Sierra Nevada snowpack work at the <a href="https://above.nasa.gov/SnowEx/2020_agenda.html">NASA Terrastrial Hydrology Program Snow Virtual meeting</a> on 14th Sepember, 2020! I also served as a moderator of the Prairie snow group for the breakout discussion. It was great time to hear and discuss various opinions and thoughts about the gaps/opportunities for prairie snow research from operational and science perspectives. More than 80 snow scientists and hydrologists attended this meeting. My presentation title is <b><i>"How different are the Sierra Nevada snowpack estimates from four land surface models with three forcing datasets?". </i></b> Click <a href="https://above.nasa.gov/files/snowex_2020/Cho_Day2_poster_879.pdf"><b>here</b></a> for the full slides. </span> 
 
 If you want to hear my blizzard talk, please click the video below. 
 <iframe width="600" height="337" src="https://above.nasa.gov/files/snowex_2020/Cho_Day2_blizzard_839.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
