--- a/news/2020.md
+++ b/news/2020.md
@@ -3,6 +3,15 @@ layout: page
 title: News
 subtitle: What is happening?
 ---
+<span style="font-size: 15px !important; color: #BD0026;">Oct 2020 </span>
+
+<span style="font-size: 18px !important; color: #07153D;">I'm super exciting to see that our recent work published in <a href="https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2020WR028126">Water Resources Research</a> with my advisor, Dr. Jennifer Jacobs, for infrastructure design to withstand snowmelt flooding was featured in <a href="https://eos.org/articles/how-infrastructure-standards-miss-the-mark-on-snowmelt">AGU EOS Science News <b>"How Infrastructure Standards Miss the Mark on Snowmelt"</b></a> on 16th October, 2020! Check it out!
+  
+<span style="font-size: 15px !important; color: #3759BD; "><i>Cho is working on that problem and currently trying to determine how climate change will influence their values. “Based on this climate issue, the standard values should be updated regularly in the future to provide the most robust guidance for engineering or water resource management,” he said.</i></span>
+
+<img src="/news/images/AGU_EOS_snapshot.PNG" width="600" align="center" hspace="20" />
+<br>
+
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2020 </span>
 
 <span style="font-size: 18px !important; color: #07153D;">I presented my Sierra Nevada snowpack work at the <a href="https://above.nasa.gov/SnowEx/2020_agenda.html">NASA Terrastrial Hydrology Program Snow Virtual meeting</a> on 14th Sepember, 2020! I also served as a moderator of the Prairie snow group for the breakout discussion. It was great time to hear and discuss various opinions and thoughts about the gaps/opportunities for prairie snow research from operational and science perspectives. More than 80 snow scientists and hydrologists attended this meeting. My presentation title is <b><i>"How different are the Sierra Nevada snowpack estimates from four land surface models with three forcing datasets?". </i></b> Click <a href="https://above.nasa.gov/files/snowex_2020/Cho_Day2_poster_879.pdf"><b>here</b></a> for the full slides. </span> 
