--- a/news/2020.md
+++ b/news/2020.md
@@ -6,10 +6,10 @@ subtitle: What is happening?
 <span style="font-size: 15px !important; color: #BD0026;">Oct 2020 </span>
 
 <span style="font-size: 18px !important; color: #07153D;">I'm super exciting to see that our recent work published in <a href="https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2020WR028126">Water Resources Research</a> with my advisor, Dr. Jennifer Jacobs, for infrastructure design to withstand snowmelt flooding was featured in <a href="https://eos.org/articles/how-infrastructure-standards-miss-the-mark-on-snowmelt">AGU EOS Science News <b>"How Infrastructure Standards Miss the Mark on Snowmelt"</b></a> on 16th October, 2020! Check it out!
-  
-<span style="font-size: 15px !important; color: #3759BD; "><i>Cho is working on that problem and currently trying to determine how climate change will influence their values. “Based on this climate issue, the standard values should be updated regularly in the future to provide the most robust guidance for engineering or water resource management,” he said.</i></span>
+ 
+<span style="font-size: 16px !important; color: #3759BD; "><i>In the article, "Knowing the hazards posed by snowmelt-driven floods, Cho and Jacobs analyzed snow water equivalent (a measure of the amount of water contained in snowpack) and snowmelt data across the continental United States"... "Cho is working on that problem and currently trying to determine how climate change will influence their values. “Based on this climate issue, the standard values should be updated regularly in the future to provide the most robust guidance for engineering or water resource management”.</i></span>
 
-<img src="/news/images/AGU_EOS_snapshot.PNG" width="600" align="center" hspace="20" />
+<img src="/news/images/AGU_EOS_snapshot.png" width="600" align="center" hspace="20" />
 <br>
 
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2020 </span>
